
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef enum msg_hash_enums { ____Placeholder_msg_hash_enums } msg_hash_enums ;
__attribute__((used)) static int is_rdb_entry(enum msg_hash_enums enum_idx)
{
   switch (enum_idx)
   {
      case 130:
      case 141:
      case 132:
      case 134:
      case 137:
      case 136:
      case 143:
      case 138:
      case 131:
      case 142:
      case 139:
      case 140:
      case 135:
      case 129:
      case 128:
      case 133:
         break;
      default:
         return -1;
   }

   return 0;
}
